ouitline for resCategory-li done

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -21,3 +21,27 @@ img{
 .postalCode{
     width: 250px;
 }
+
+.categoryList{
+    margin: 0 auto;
+    display: flex;
+    /* border: 1px solid black; */
+    height: 90px;
+    width: 80%;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.categoryCard {
+    border: 1px solid black;
+    height: 60px;
+    max-width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+.categoryCardTitle{
+    text-align: center;
+    width: 150px;
+}
