--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,25 +1,5 @@
-.NavBar {
-    display: flex;
-    justify-content: space-evenly;
-    background:grey;
-    height: 50px;
-}
-
-.NavBar div {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-items: center;
-    border-left: 2px solid black;
-    padding: 0 20px;
-}
-img{
-    height: 32px;
-    margin: 5px 5px px 0;
-}
-
-.postalCode{
-    width: 250px;
+.navBarDes {
+   margin: 10px 10px;
 }
 
 .categoryList{
@@ -34,6 +14,8 @@ img{
 
 .categoryCard {
     border: 1px solid black;
+    background: yellow;
+    border-radius: 20px;
     height: 60px;
     max-width: 150px;
     display: flex;
