--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,3 +1,16 @@
 .navBarDes {
    margin: 10px 10px;
 }
+
+.catCard, .restCard{
+   border-radius: 4px;
+   background: #fff;
+   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+ cursor: pointer;
+}
+
+.catCard:hover, .restCard:hover{
+    transform: scale(1.05);
+ box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
